<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <EditText
        android:id="@+id/edtSearchData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/edt_hint_search_param"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#039BE5"
        android:textColorHint="#484848"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtSearchData">

        <RadioButton
            android:id="@+id/rbtnTabNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_tab_num" />

        <RadioButton
            android:id="@+id/rbtnLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_line" />

        <RadioButton
            android:id="@+id/rbtnFirst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_first" />

        <RadioButton
            android:id="@+id/rbtnLast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_last" />

        <RadioButton
            android:id="@+id/rbtnDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radio_button_date" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/round_shape_btn2"
        android:text="@string/btn_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/round_shape_btn2"
        android:text="@string/btn_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch" />

    <ListView
        android:id="@+id/listView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClear" />

</androidx.constraintlayout.widget.ConstraintLayout>