<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditTransit"
    android:background="@color/colorPrimaryDark2">

    <EditText
        android:id="@+id/edtTabNumEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/edt_hint_bus_tram_relic_tab_num"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#039BE5"
        android:textColorHint="#484848"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtLineNumEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/edt_hint_bus_line_num"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#039BE5"
        android:textColorHint="#484848"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTabNumEdit" />

    <EditText
        android:id="@+id/edtDirectionEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/edt_hint_bus_direction"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#039BE5"
        android:textColorHint="#484848"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLineNumEdit" />

    <EditText
        android:id="@+id/edtFirstEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/edt_hint_bus_first"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#039BE5"
        android:textColorHint="#484848"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDirectionEdit" />

    <EditText
        android:id="@+id/edtLastEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/edt_hint_bus_last"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#039BE5"
        android:textColorHint="#484848"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtFirstEdit" />

    <Button
        android:id="@+id/btnEditTransit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/round_shape_btn2"
        android:text="@string/btn_edit_transit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtLastEdit" />

    <Button
        android:id="@+id/btnGoBack"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/round_shape_btn2"
        android:text="@string/btn_go_back_transits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditTransit" />
</androidx.constraintlayout.widget.ConstraintLayout>