<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddingNewTram"
    android:background="@color/colorPrimaryDark2">

    <EditText
        android:id="@+id/edtTabNumTramAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/edt_hint_bus_tram_relic_tab_num"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#039BE5"
        android:textColorHint="#484848"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtMakerTramAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/edt_hint_bus_tram_relic_maker"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#039BE5"
        android:textColorHint="#484848"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTabNumTramAdd" />

    <EditText
        android:id="@+id/edtModelTramAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/edt_hint_bus_tram_relic_model"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#039BE5"
        android:textColorHint="#484848"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtMakerTramAdd" />

    <EditText
        android:id="@+id/edtInfoTramAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:ems="10"
        android:hint="@string/edt_hint_bus_tram_relic_info"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHighlight="#039BE5"
        android:textColorHint="#484848"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtModelTramAdd" />

    <Button
        android:id="@+id/btnAddTram"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:background="@drawable/round_shape_btn2"
        android:text="@string/btn_adding_tram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtInfoTramAdd" />
</androidx.constraintlayout.widget.ConstraintLayout>